mejoras documentación swagger - respuestas http
